# Cloud

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
lib/: main.dart
lib/bindings/: app_bindings.dart
lib/controllers/: file_controller.dart  home_controller.dart
lib/models/: file_model.dart  file_model.g.dart
lib/screens/: dashboard_screen.dart  desktop_home_screen.dart  files_screen.dart  home_screen.dart  media_viewer_screen.dart  profile_screen.dart  search_screen.dart  settings_screen.dart  splash_screen.dart  upload_screen.dart
lib/services/: desktop_service.dart  file_storage_service.dart  storage_service.dart  telegram_service.dart
lib/utils/: constants.dart  theme.dart  translations.dart
lib/widgets/: file_card.dart  file_grid_card.dart  glass_card.dart  neumorphic_container.dart  quick_action_widget.dart  recent_file_item.dart  stats_card.dart
lib/widgets/desktop/: app_bar.dart  file_grid.dart  preview_panel.dart  sidebar.dart  status_bar.dart
scripts/: fix_flutter_windows.ps1  vswhere_wrapper.cs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  resource.h  utils.cpp  win32_window.cpp  win32_window.h
(+2 files in other folders)
